# phantom-wiki

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  README.md  architect_bio.txt  cfg.py  demo.ipynb  demo_new.ipynb  nohup.out  person.py  pipeline.py  pl_to_article.py  pyproject.toml  relationships.py  requirements-eval.txt  test_sambanova.py
data/: PhantomWiki_local.py  README.md  README_condensed.md  convert_to_parquet.py  dataset_script.py  fix_format_llm_rephrased.py  generate-v02.sh  generate-v021.sh  generate-v05.sh  generate-v1.sh  generate.sh  plot_difficulty.py  plot_difficulty_distribution.py  plot_reasoning_steps_distribution.py  plot_solutions_distribution.py  push_to_hub.py
docs/: aksjd2389279nf2_example.md  data_contamination_papers.csv  data_contamination_papers.json  data_contamination_papers.py  datalog_examples.md  job_cfg.md  jon_kleinberg_example.md  prolog.md
eval/: RAG.py  README.md  act_L-empire.sh  act_L.sh  constants.sh  cot-sc.sh  cot-sc_L.sh  cot-sc_M.sh  cot-sc_S.sh  cot.sh  cot_L.sh  cot_M.sh  cot_S.sh  cot_cpu.sh  cot_rag.sh  cot_rag_L.sh  cot_rag_M.sh  cot_rag_S.sh  cot_rag_cpu.sh  cot_rag_cpu_large.sh  cot_rag_reasoning.sh  cot_reasoning.sh  create_eval.sh  evaluate.py  evaluate.sh  evaluate_and_plot_all.sh  evaluate_icml.sh  evaluate_with_vllm_on_v1.sh  fewshot-sc.sh  fewshot-sc_L.sh  fewshot-sc_M.sh  fewshot-sc_S.sh  fewshot.sh  fewshot_L.sh  fewshot_M.sh  fewshot_S.sh  fewshot_rag_M.sh  fewshot_rag_S.sh  format_leaderboard.py  format_split_accuracy.py  (+66 more)
examples/: article_generation.py  async_rpm.py  async_rpm_tpm.py  (+11 more)
(+538 files in other folders)
